# leonardo_blog

./: .gitignore  404.html  BLOG_TEMPLATES.md  CNAME  README.md  TROUBLESHOOTING.md  archives.html  authors.html  bilingual_guide.md  categories.html  hello-world.html  hugo.toml  index.html  index.json  index.xml  pelicanconf.py  publishconf.py  pyproject.toml  sitemap.xml  tags.html  verify-site.sh  walkthrough.md
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
about/: index.html
archetypes/: default.md  experience.md  project.md  tutorial.md
assets/css/: stylesheet.6310ae22d781e30eb99ffa70ad5e772a55832781170b2f53b43a0890ee734ce1.css
author/: leonardo-foo.html
categories/: index.html  index.xml
categories/ai--machine-learning/: index.html  index.xml
categories/development/: index.html  index.xml
categories/development-tools/: index.html  index.xml
categories/general/: index.html  index.xml
categories/quick-tips/: index.html  index.xml
categories/updates/: index.html  index.xml
categories/web-development/: index.html  index.xml
category/: general.html
content/: about.md  hello-world.md  projects.md  resume.md  search.md  search.zh-tw.md
content/about/: index.md  index.zh-tw.md
content/resume/: index.md  (+1 more)
en/: index.html  sitemap.xml
feeds/: all.atom.xml  general.atom.xml
posts/: index.html  index.xml
projects/: index.html  index.xml
resume/: index.html
search/: index.html
tag/: blog.html  pelican.html  setup.html
tags/: index.html  index.xml
zh-tw/: 404.html  index.html  index.json  index.xml  sitemap.xml
(+143 files in other folders)
